fighter pilot xhair

--- a/cfgxhair/cfg/user/autoexec.cfg
+++ b/cfgxhair/cfg/user/autoexec.cfg
@@ -18,6 +18,9 @@ tf_dingaling_pitchmindmg 120
 tf_dingaling_pitchmaxdmg 45
 tf_dingaling_lasthit_pitch_override 100
 
+hud_combattext_batching 1
+hud_combattext_batching_window 0.3
+
 tf_sniper_fullcharge_bell 1
 cl_autorezoom 0
 tf_medigun_autoheal 1
