--- a/cfgxhair/cfg/user/modules.cfg
+++ b/cfgxhair/cfg/user/modules.cfg
@@ -1,3 +1,5 @@
+// Modules template: for ADVANCED users only!
+//
 //********************************************************************************
 // HOW TO USE:
 //********************************************************************************
@@ -10,12 +12,12 @@
 // To deactivate a module, comment it out ( add a '//' before the module ).
 //
 // To change a module, change the preset name after the '='
-// For example, to change packet_rate=standard to balanced, delete the word 'standard' and
-// replace it with 'balanced' ( packet_rate=balanced ). Below every module is a list of
+// For example, to change textures=low to high, delete the word 'low' and
+// replace it with 'high' ( textures=high ). Below every module is a list of
 // presets you can change the module to.
 //
 // For more information on modules, you can visit this website:
-// https://docs.mastercomfig.com/en/stable/customization/modules/#modules
+// https://docs.mastercomfig.com/page/customization/modules/
 //
 // Modules template created by Fraklin
 
@@ -23,68 +25,74 @@
 // NETWORK MODULES
 //********************************************************************************
 
-packet_rate=standard
-// standard, balanced, conservative, congestion
+sourcetv=off
+// on, off
 
-snapshot_buffer=low
-// high, safe, low
+packet_rate=standard
+// standard, congestion
+
+//snapshot_buffer=auto
+// auto, high, safe, low
 
 packet_size=big
-// big, balanced, minimal, conservative
+// speed, saver, big, conservative, small
 
-bandwidth=max
-// max, unrestricted, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 768Kbps, 512Kbps, 384Kbps, restricted
+bandwidth=8.0Mbps
+// 8.0Mbps, 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 768Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
 
-download=all
-// all, nosounds, mapsonly, none
+download=auto
+// auto, all, nosounds, mapsonly, none
 
 //********************************************************************************
 // RENDERING MODULES
 //********************************************************************************
 
-// lod=ultra
-// ultra, high, medium_high, medium, low
+lod=high
+// ultra, high, medium, low
 
 lighting=medium
 // ultra, very_high, high, medium_high, medium, low, very_low
 
-// shadows=ultra
+lighting_ex=high
+// high, low
+
+shadows=ultra
 // ultra, high, medium, low, very_low, off
 
-// effects=ultra
+effects=high
 // ultra, high, medium, low
 
-// water=ultra
+water=medium
 // ultra, very_high, high, medium_high, medium, low, very_low
 
-// particles=ultra
+particles=medium
 // ultra, high, medium, low, very_low
 
-// post_processing=ultra
-// ultra, high, medium, low, off
+post_processing=high
+// high, medium, low, off
 
-// pyrovision=high
+pyrovision=low
 // high, medium, low
 
 motion_blur=off
 // high, low, off
 
-// aa=on
+aa=off
 // on, off
 
-// aa_msaa=8x
-// 16xq_csaa, 8x, 4x, 2x, off
+aa_msaa=off
+// 8x, 4x, 2x, off
 
-// texture_filter=aniso16x
+texture_filter=aniso16x
 // aniso16x, aniso8x, aniso4x, aniso2x, trilinear, bilinear
 
-// characters=ultra
+characters=ultra
 // ultra, high, medium_high, medium, low, very_low
 
-// decals=ultra
+decals=off
 // ultra, high, medium, low, off
 
-// decals_models=high
+decals_models=off
 // high, low, off
 
 decals_art=on
@@ -93,35 +101,41 @@ decals_art=on
 sprays=on
 // on, off
 
-// gibs=high
+gibs=off
 // high, medium, low, off
 
-// lowviolence=on
-// on, off
+sillygibs=auto
+// auto, on, off
 
-// props=ultra
+props=low
 // ultra, high, medium, low
 
-// ragdolls=high
-// high, medium, off
+ragdolls=off
+// high, medium, low, off
 
 3dsky=off
 // on, off
 
-// jigglebones=force_on
+jigglebones=off
 // force_on, on, off
 
-// sheens_speed=fast
-// fast, medium, slow
+//sheens_speed=slow
+// fast, medium, slow, off
 
-// sheens_tint=full
+//sheens_tint=high
 // full, high, medium, low
 
 textures=very_high
 // very_high, high, medium, low, very_low
 
-// ropes=ultra
+ropes=off
 // ultra, high, low, off
+
+fpscap=120
+// unlimited, 1000, 400, 360, 300, 240, 200, 180, 165, 160, 144, 120, 75, 60, 30, powersaver
+
+opengl=skip
+// default, skip
 
 //********************************************************************************
 // HUD MODULES
@@ -133,26 +147,49 @@ hud_player_model=on
 hud_panels=on
 // on, off
 
-messages=enable
-// enable, userchat, disable
-
-killfeed=on
+match_hud=on
 // on, off
 
-killstreaks=high
-// high, low, off
+messages=on
+// on, hide, off
 
-outlines=high
-// high, low, off
+//killfeed=on
+// on, off
 
-dynamic_background=off
-// dustbowl, itemtest, preload, off
+//killstreaks=high
+// high, low, off
 
 hud_achievement=off
-// off, on
+// on, off
 
-debug=minimal
+//debug=minimal
 // off, minimal, on_partial, on
 
-sound=ultra
+outlines=high
+// high, medium, low, off
+
+dynamic_background=preload
+// dustbowl, itemtest, preload, off
+
+//********************************************************************************
+// SOUND MODULES
+//********************************************************************************
+
+sound=low
 // ultra, very_high, high, medium, low
+
+//voice_chat=on
+// on, off
+
+//********************************************************************************
+// MISCELLANEOUS MODULES
+//********************************************************************************
+
+//mod_support=on
+// off, on
+
+//logo=on
+// on, off
+
+//move_bind=wasd
+// wasd, esdf, zqsd, arrows, asdf, vim
