updated medic config with better binds and more keys to trigger pseudorandom cycling

--- a/cfgxhair/cfg/user/game_overrides.cfg
+++ b/cfgxhair/cfg/user/game_overrides.cfg
@@ -3,9 +3,15 @@ bind 2 slot2
 bind 3 slot3
 bind 4 slot4
 bind mouse1 +attack
+bind mouse2 +attack2
 bindtoggle v r_drawviewmodel
 r_drawviewmodel 1
 viewmodel_fov 90
+
+bind w +mf
+bind a +ml
+bind s +mb
+bind d +mr
 
 bind e "voicemenu 0 0"
 
