--- a/cfgxhair/cfg/user/medic.cfg
+++ b/cfgxhair/cfg/user/medic.cfg
@@ -1,24 +1,59 @@
 // scrambled's Medic Config
 // Pseudorandom voicelines for masking
  
-// Add binds to reset mouse1 and 4 in your game overrides config 
+// Add binds to reset mouse1, mouse2, 4, w, a, s and d in your game overrides config 
  
 bind "mouse1" "+click"
-bind "4" "mask"
+bind "mouse2" "+uber"
+bind "4" "mask;maskchat"
+bind "5" "fake"
 bind "e" "+radar"
+
+bind "w" "+mfc"
+bind "a" "+mlc"
+bind "s" "+mbc"
+bind "d" "+mrc"
+
+// if you use mastercomfig's null cancelling movement addon, uncomment this
+alias "+mfc" "+mf;changevoice"
+alias "-mfc" "-mf;changevoice"
+alias "+mlc" "+ml;changevoice"
+alias "-mlc" "-ml;changevoice"
+alias "+mbc" "+mb;changevoice"
+alias "-mbc" "-mb;changevoice"
+alias "+mrc" "+mr;changevoice"
+alias "-mrc" "-mr;changevoice"
+
+// if you don't use any null cancelling movement addon, uncomment this
+//alias "+mfc" "+forward;changevoice"
+//alias "-mfc" "-forward;changevoice"
+//alias "+mlc" "+moveleft;changevoice"
+//alias "-mlc" "-moveleft;changevoice"
+//alias "+mbc" "+back;changevoice"
+//alias "-mbc" "-back;changevoice"
+//alias "+mrc" "+moveright;changevoice"
+//alias "-mrc" "-moveright;changevoice"
+
+// chatbinds
+alias "fakechat" "say_team *** UBER FAKED ***"
+alias "uberchat" "say_team *** UBER USED ***"
+alias "maskchat" "say_team *** UBER MASKED ***"
  
- //radar
+ // radar
 alias "+radar" "hud_medicautocallersthreshold 500;voicemenu 0 0"
 alias "-radar" "hud_medicautocallersthreshold 75"
  
 // Medigun
 alias "+click" "+attack;changevoice"
 alias "-click" "-attack"
+alias "+uber" "slot2;+attack2;mask;uber"
+alias "-uber" "-attack2"
 
 // Psuedorandom masking
 alias "changevoice" "changevoice1"
  
-alias mask mask1
+alias "mask" "mask1"
+alias "fake "voicemenu 1 7;fakechat"
  
 alias "changevoice1" "alias mask mask1;alias changevoice changevoice2"
 alias "changevoice2" "alias mask mask2;alias changevoice changevoice3"
