--- a/cfgxhair/cfg/user/medic.cfg
+++ b/cfgxhair/cfg/user/medic.cfg
@@ -46,7 +46,7 @@ alias "-radar" "hud_medicautocallersthreshold 75"
 // Medigun
 alias "+click" "+attack;changevoice"
 alias "-click" "-attack"
-alias "+uber" "slot2;+attack2;mask;uber"
+alias "+uber" "slot2;+attack2;mask;uberchat"
 alias "-uber" "-attack2"
 
 // Psuedorandom masking
