made syntax more consistent

--- a/cfgxhair/cfg/user/medic.cfg
+++ b/cfgxhair/cfg/user/medic.cfg
@@ -62,9 +62,9 @@ alias "changevoice4" "alias mask mask4;alias changevoice changevoice5"
 alias "changevoice5" "alias mask mask5;alias changevoice changevoice6"
 alias "changevoice6" "alias mask mask6;alias changevoice changevoice1"
  
-alias mask1 "voicemenu 0 0"
-alias mask2 "voicemenu 0 1"
-alias mask3 "voicemenu 0 1"
-alias mask4 "voicemenu 1 0"
-alias mask5 "voicemenu 2 2"
-alias mask6 "voicemenu 2 4"
+alias "mask1" "voicemenu 0 0"
+alias "mask2" "voicemenu 0 1"
+alias "mask3" "voicemenu 0 1"
+alias "mask4" "voicemenu 1 0"
+alias "mask5" "voicemenu 2 2"
+alias "mask6" "voicemenu 2 4"
