--- a/cfgxhair/cfg/user/medic.cfg
+++ b/cfgxhair/cfg/user/medic.cfg
@@ -38,11 +38,11 @@ alias "-mrc" "-mr;changevoice"
 alias "fakechat" "say_team *** UBER FAKED ***"
 alias "uberchat" "say_team *** UBER USED ***"
 alias "maskchat" "say_team *** UBER MASKED ***"
- 
+
  // radar
 alias "+radar" "hud_medicautocallersthreshold 500;voicemenu 0 0"
 alias "-radar" "hud_medicautocallersthreshold 75"
- 
+
 // Medigun
 alias "+click" "+attack;changevoice"
 alias "-click" "-attack"
@@ -51,17 +51,17 @@ alias "-uber" "-attack2"
 
 // Psuedorandom masking
 alias "changevoice" "changevoice1"
- 
+
 alias "mask" "mask1"
-alias "fake "voicemenu 1 7;fakechat"
- 
+alias "fake" "voicemenu 1 7;fakechat"
+
 alias "changevoice1" "alias mask mask1;alias changevoice changevoice2"
 alias "changevoice2" "alias mask mask2;alias changevoice changevoice3"
 alias "changevoice3" "alias mask mask3;alias changevoice changevoice4"
 alias "changevoice4" "alias mask mask4;alias changevoice changevoice5"
 alias "changevoice5" "alias mask mask5;alias changevoice changevoice6"
 alias "changevoice6" "alias mask mask6;alias changevoice changevoice1"
- 
+
 alias "mask1" "voicemenu 0 0"
 alias "mask2" "voicemenu 0 1"
 alias "mask3" "voicemenu 0 1"
